     decision on a per-platform basis)
   - djm@cvs.openbsd.org 2006/04/22 04:06:51
     [uidswap.c]
     use setres[ug]id() to permanently revoke privileges; ok deraadt@
     (ID Sync only - portable already uses setres[ug]id() whenever possible)
   - stevesk@cvs.openbsd.org 2006/04/22 18:29:33
     [crc32.c]
     remove extra spaces

20060421
 - (djm) [Makefile.in configure.ac session.c sshpty.c]
   [contrib/redhat/sshd.init openbsd-compat/Makefile.in]
   [openbsd-compat/openbsd-compat.h openbsd-compat/port-linux.c]
   [openbsd-compat/port-linux.h] Add support for SELinux, setting 
   the execution and TTY contexts. based on patch from Daniel Walsh,
   bz #880; ok dtucker@

20060418
 - (djm) [canohost.c] Reorder IP options check so that it isn't broken
   by mapped addresses; bz #1179 reported by markw wtech-llc.com;
   ok dtucker@

20060331
 - OpenBSD CVS Sync
   - deraadt@cvs.openbsd.org 2006/03/27 01:21:18
     [xmalloc.c]
     we can do the size & nmemb check before the integer overflow check; 
     evol
   - deraadt@cvs.openbsd.org 2006/03/27 13:03:54
     [dh.c]
     use strtonum() instead of atoi(), limit dhg size to 64k; ok djm
   - djm@cvs.openbsd.org 2006/03/27 23:15:46
     [sftp.c]
     always use a format string for addargs; spotted by mouring@
   - deraadt@cvs.openbsd.org 2006/03/28 00:12:31
     [README.tun ssh.c]
     spacing
   - deraadt@cvs.openbsd.org 2006/03/28 01:52:28
     [channels.c]
     do not accept unreasonable X ports numbers; ok djm
   - deraadt@cvs.openbsd.org 2006/03/28 01:53:43
     [ssh-agent.c]
     use strtonum() to parse the pid from the file, and range check it
     better; ok djm
   - djm@cvs.openbsd.org 2006/03/30 09:41:25
     [channels.c]
     ARGSUSED for dispatch table-driven functions
   - djm@cvs.openbsd.org 2006/03/30 09:58:16
     [authfd.c bufaux.c deattack.c gss-serv.c mac.c misc.c misc.h]
     [monitor_wrap.c msg.c packet.c sftp-client.c sftp-server.c ssh-agent.c]